# machine-learning-book

./: pyproject.toml  python_environment_check.py
ch07/: ch07.ipynb
ch08/: .gitignore  ch08.ipynb
ch09/: ch09.ipynb
ch10/: ch10.ipynb
ch12/: ch12_part1.ipynb  ch12_part2.ipynb
