[project]
name = "machine-learning-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "mlxtend>=0.23.4",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyprind>=2.11.3",
    "scikit-learn>=1.6.1",
    "xgboost>=2.1.4",
]
